appId: com.maudau
---
- launchApp:
    clearState: true
- tapOn:
    text: "Пропустити"
    optional: true
- tapOn:
    text: "Продовжити без авторизації"
    optional: true
- tapOn:
    text: "Пропустити"
    optional: true
- tapOn:
    text: "Не зараз"
    optional: true
